K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: challenge-app-ingress

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx

  rules:
    - host: challenge-app.com

      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
